# portal

./: .gitignore
AI-model/: airesult_to_xml.py  upload_result.py  web_service.py  webser.py
ALG_server/: manage.py
ALG_server/ALG_server/: settings.py  urls.py  wsgi.py
ZH/Log/McsfLogServer/: CMakeLists.txt  McsfLogServer.vcxproj  resource.h  stdafx.cpp  stdafx.h
ZH/Log/McsfLogServer/include/: mcsf_log_connection.h  mcsf_log_connection_manager.h  mcsf_log_file.h  mcsf_log_server_buffer.h  mcsf_log_server_do_parsing.h  mcsf_log_server_xml_parser.h  mcsf_log_socket_receiver.h  stdafx.h
ZH/Log/McsfLogServer/source/: mcsf_log_connection.cpp  mcsf_log_connection_manager.cpp  mcsf_log_file.cpp  mcsf_log_server_do_parsing.cpp  mcsf_log_server_main.cpp  mcsf_log_server_xml_parser.cpp  mcsf_log_socket_receiver.cpp
ZH/Log/McsfLogger/: CMakeLists.txt  McsfLogger.rc  McsfLogger.vcxproj  resource.h  stdafx.cpp  stdafx.h
ZH/Log/McsfLogger/include/: mcsf_log_buffer.h  mcsf_log_do_parsing.h  mcsf_log_file_proxy.h  mcsf_log_processor.h  mcsf_log_socket_sender.h  mcsf_log_xml_parse.h
ZH/Log/McsfLogger/source/: mcsf_log_buffer.cpp  mcsf_log_do_parsing.cpp  mcsf_log_processor.cpp  mcsf_log_socket_sender.cpp  mcsf_log_xml_parse.cpp  mcsf_logger_base.cpp
ZH/NetBase/McsfNetBase/: CMakeLists.txt  McsfNetBase.rc  McsfNetBase.vcxproj  McsfNetBase.vcxproj.filters  Mcsf_SysCommandDef.proto  RpcMessage.proto  SystemCmdMessage.proto  build_csharp.bat  mcsf_netbase.swig  proto_gen.bat  proto_gen_SysCommandDef.bat  resource.h
ZH/NetBase/McsfNetBase/include/: mcsf_acceptor.h  mcsf_asyc_servicecmd_process.h  mcsf_asyncResult.h  mcsf_blobdata_interface.h  mcsf_client_manager.h  mcsf_connector.h  mcsf_dynamic_threadpool.h  mcsf_ichannel.h  mcsf_inner_cmd_handler.h  mcsf_irefcount.h  mcsf_logger_message_export.h  mcsf_netbase.swig  mcsf_netbase_iclr_cmd_handler.h  mcsf_netbase_wrap.cxx  mcsf_pending_call.h  mcsf_share_memory_receiver.h  mcsf_share_memory_sender.h  mcsf_socket_receiver.h  mcsf_socket_sender.h  mcsf_swig_sharedarray_util.h  mcsf_swig_string_util.h  mcsf_sync_result.h  mcsf_sys_event_def.h  mcsf_tcp_channel.h  mcsf_tcp_client.h  mcsf_tcp_server.h  mcsf_tcphandler.h
ZH/NetBase/McsfNetBase/src/: Mcsf_SysCommandDef.pb.cc  mcsf_acceptor.cpp  mcsf_asyc_servicecmd_process.cpp  mcsf_asyncResult.cpp  mcsf_client_manager.cpp  mcsf_communication_node_name.cpp  mcsf_communication_proxy.cpp  mcsf_communication_proxy_factory.cpp  mcsf_connector.cpp  mcsf_dynamic_threadpool.cpp  mcsf_error_code.cpp  mcsf_inner_cmd_handler.cpp  mcsf_logger_message_export.cpp  mcsf_netbase_iclr_cmd_handler.cpp  mcsf_netbase_wrap.cxx  mcsf_pending_call.cpp  mcsf_share_memory_receiver.cpp  mcsf_share_memory_sender.cpp  mcsf_socket_receiver.cpp  mcsf_socket_sender.cpp  mcsf_tcp_channel.cpp  mcsf_tcp_client.cpp  mcsf_tcp_server.cpp  mcsf_tcphandler.cpp  stdafx.h
ZH/NetBase/McsfNetBase2/: CMakeLists.txt  Makefile  McsfNetbase.vcxproj  SystemCmdMessage.pb.cc  SystemCmdMessage.pb.h  async_blob_data_callback_handler.hpp  build_csharp.bat  callback_handle.hpp  client.hpp  com_proxy_impl.hpp  connection_i.cpp  connection_i.hpp  connection_manager.cpp  connection_manager.hpp  dispatcher.hpp  dispatcher_server.vcxproj  dispatcher_server.vcxproj.filters  icom_proxy.h  id_def.h  impl_main.cpp  io_service_pool.cpp  io_service_pool.hpp  main.cpp  main_client.cpp  main_priority_queue.cpp  mcsf_blobdata_interface.h  mcsf_communication_node_name.cpp  mcsf_communication_proxy.cpp  mcsf_error_code.cpp  mcsf_netbase.swig  mcsf_netbase_iclr_cmd_handler.cpp  mcsf_netbase_iclr_cmd_handler.h  mcsf_netbase_wrap.h  mcsf_refined_log.h  mcsf_share_memory_receiver.cpp  mcsf_share_memory_receiver.h  mcsf_share_memory_sender.cpp  mcsf_share_memory_sender.h  mcsf_socket_receiver.cpp  mcsf_socket_receiver.h  (+9 more)
ZH/NetBase/Test/: CMakeLists.txt  Makefile  comproxy.cpp
ZH/data_checker/uAIDataChecker/: CMakeLists.txt  Makefile  camera.cpp  cmake_install.cmake  common_functor.cpp  common_functor.h  dicom_code_assist.h  dicom_loader.cpp  dicom_loader.h  dicom_slice.cpp  dicom_slice.h  matrix_3x3.cpp  matrix_4x4.cpp  plane.cpp  plane2d.cpp  point2d.cpp  point3d.cpp  quaternion.cpp  readme.txt  track_ball.cpp  uAIDataChecker.sln  uAIDataChecker.vcxproj  uAIDataChecker.vcxproj.filters  uai_app_volume_builder.cpp  uai_app_volume_builder.h  uai_dicom_slicer_check_api.h  uai_dicom_slicer_checker.cpp  uai_dicom_slicer_checker.h  uai_dicom_sopclassuid_def.h  vector2d.cpp  vector3d.cpp  vector4d.cpp
back_end/: .gitignore  back_end_uwsgi.ini  log.txt  manage.py  requirements.txt  test.py  twisted_client.py
doc/: IDD.md  ImageAPI.md  Portal_Research进度更新.pptx  UAI_Contour_20181102_v1.docx  UAI_Contour_Requirement.docx  clear_table.sql  db_create.sql  db创建文档.docx  liuyan_test.sql  portal数据交互流图.vsdx  portal服务请求框架时序图.vsdx  uAI_Contour User Story.docx  uAI_Contour设计文档-绘图.vsdx  uAI_Contour设计文档.docx  uAI_Portal_Arc.pptx  uAI_Portal_Final.pptx  uAI_Portal_Research_架构技术选型.pptx  uai_research.xmind  在Windows平台TTFB耗时长的问题解决方法.txt  生成Rt structureSet中遇到的问题以及解决办法.docx
front_end/: .angulardoc.json  .gitignore  IDD.md  README.md  angular.json  front.sh  package.json  tslint.json
image_server/: dispatcher.py  image_server_nginx.conf  image_server_uwsgi.ini  manage.py  server.py
img_svr/: command.py  coord.py  dispatcher.py  file_server.py  image_server.py  img_srv.sh  message.py  server.py  simpleserv.py  socket_factory.py  utilities.py
netbase/: _McsfNetBase.pyd  _uAIDataLayer.pyd  c_log.py  cmd_event_id.py  comproxy.py  data_checker.py  libboost_date_time-gcc54-mt-1_60.so.1.60.0  libboost_filesystem-gcc54-mt-1_60.so.1.60.0  libboost_regex-gcc54-mt-1_60.so.1.60.0  libboost_system-gcc54-mt-1_60.so.1.60.0  libboost_thread-gcc54-mt-1_60.so.1.60.0  libcharls.so.11  libdcmdata.so.11  libdcmimage.so.11  libdcmimgle.so.11  libdcmjpeg.so.11  libdcmjpls.so.11  libijg12.so.11  libijg16.so.11  libijg8.so.11  liboflog.so.11  libofstd.so.11  log_config.xml  netbase_win32.py  prog.py  prog_fe.py  start_srv.bat  test  uAIDataLayer.py
node_mgr/: call_center_node.py  run.py
(+720 files in other folders)
